--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -42,6 +42,7 @@
     </script>
 {{ end }}
 
+<link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Cinzel">
 <link rel="stylesheet" href="{{ "lib/icofont/icofont.min.css" | relURL }}" />
 <link rel="stylesheet" href="{{ "css/syntax.css" | relURL }}" />
 <link rel="stylesheet" href="{{ "css/style.css" | relURL }}" />
