--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -42,6 +42,8 @@
     </script>
 {{ end }}
 
+<script src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/input/tex/extensions/braket.js" charset="UTF-8"></script>
+
 <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Cinzel">
 <link rel="stylesheet" href="{{ "lib/icofont/icofont.min.css" | relURL }}" />
 <link rel="stylesheet" href="{{ "css/syntax.css" | relURL }}" />
