--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -38,6 +38,9 @@
 <script>
     MathJax = {
         tex: {
+            autoload: {
+                verb: ['braket']
+            },
             inlineMath: [['$', '$'], ['\\(', '\\)']]
         },
         svg: {
