--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -17,15 +17,15 @@
                 <h2>About</h2>
                 <hr />
                 <div class="profile-image-wrapper"><img class="profile-image" src="/images/filipw.jpeg" /></div>
-                <p>Hi! I'm <strong>Filip W.</strong>, a cloud architect from Zürich 🇨🇭. I like <a
+                <p>Hi! I'm <strong>Filip W.</strong>, a software architect from Zürich 🇨🇭. I like <a
                         href="http://mapleleafs.com" target="_blank">Toronto Maple Leafs</a> 🇨🇦, <a
                         href="http://rancidrancid.com" target="_blank">Rancid</a> and <a
                         href="https://link.springer.com/book/10.1007/978-3-030-99379-5" target="_blank">quantum
                         computing</a>. Oh, and I love
                     the <a href="http://en.wikipedia.org/wiki/Scottish_Lowlands" target="_blank">Lowlands</a> 🏴󠁧󠁢󠁳󠁣󠁴󠁿.</p>
                 <p> You can
-                    find me on <a href="https://github.com/filipw">Github</a> and on
-                    <a rel="me" href="https://mathstodon.xyz/@filipw">Mastodon</a>.
+                    find me on <a href="https://github.com/filipw">Github</a>, on
+                    <a rel="me" href="https://mathstodon.xyz/@filipw">Mastodon</a> and on <a href="https://bsky.app/profile/filipw.strathweb.com">Bluesky</a>.
                 </p>
                 <div class="profile-image-wrapper"><a
                         href="https://link.springer.com/book/10.1007/978-3-030-99379-5"><img
